upgraded JSON library to latest version from https://github.com/stleary/JSON-java keeping small extensions we are using to make the JSON more pretty